--- a/com.icons8.Lunacy.yml
+++ b/com.icons8.Lunacy.yml
@@ -51,7 +51,7 @@ modules:
           - x86_64
         x-checker-data:
           type: html
-          url: https://docs.icons8.com/release-notes
+          url: https://lunacy.docs.icons8.com/release-notes
           pattern: (https://\S+/setup/Lunacy_([0-9.]+)\.deb)
           is-main-source: true
 
@@ -65,7 +65,7 @@ modules:
           - aarch64
         x-checker-data:
           type: html
-          url: https://docs.icons8.com/release-notes
+          url: https://lunacy.docs.icons8.com/release-notes
           pattern: (https://\S+/setup/lunacy_([0-9.]+)_arm64\.deb)
           is-main-source: false
 
